# FeOS

./: .gitignore  CONTRIBUTING.md  Cargo.toml  SECURITY.md  build.rs  readme.md  version.txt
.cargo/: config.toml
kernel/: Cargo.toml  version.txt
kernel/src/: alloc.rs  clock.rs  disk.rs  interrupts.rs  lib.rs  main.rs
kernel/src/applications/: assembly.rs
kernel/src/data/: mod.rs
src/: alloc.rs  clock.rs  disk.rs  filesystem.rs  gdt.rs  input.rs  interrupts.rs  lib.rs  main.rs  python.rs  string.rs  uefi.rs  vec.rs  vga.rs  window.rs
src/applications/: basic.rs  blip.rs  femc.rs  mod.rs  nyo.rs  pong.rs  python.rs
src/data/: basefiles.rs
src/disk/: disk.rs  filesystem.rs  mod.rs
src/network/: network.rs
src/pci/: scan.rs
src/renderer/: colors.rs  image.rs  mod.rs  text.rs
src/renderer/vga/: writer.rs
