[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.10.2" }
volatile = "0.2.6"
x86_64 = "0.14.2"
spin = "0.5.2"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[build-dependencies]
bootimage = "0.10.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootloader]
target = "x86_64-fem_dos.json"

[[bin]]
name = "kernel"
path = "src/main.rs"